--- a/html/index.html
+++ b/html/index.html
@@ -46,6 +46,9 @@
 </head>
 
 <body>
+You should download the swf object from the link below and copy it into html/ folder<br />
+        <a href = "http://speedy.sh/eWksa/recorder.swf">http://speedy.sh/eWksa/recorder.swf</a><br />
+        
   <p><strong>Upload requires php, i.e. example will not work on github.com</strong></p>
 
   <div id="status">
@@ -78,7 +81,10 @@
 
   <span id="save_button">
     <span id="flashcontent">
-      <p>Your browser must have JavaScript enabled and the Adobe Flash Player installed.</p>
+      <p>Your browser must have JavaScript enabled and the Adobe Flash Player installed.<br />
+        You should have also download the swf object from the link below and copy it into html/ folder<br />
+        <a href = "http://speedy.sh/eWksa/recorder.swf">http://speedy.sh/eWksa/recorder.swf</a>
+      </p>
     </span>
   </span>
   <div>Duration: <span id="duration"></span></div>
